ajuste cabeçalho da janela de pesquisa do maps

--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -24,13 +24,6 @@
   height: 30px;
   color: white;
 }
- /*
-.container-artigos article div {
-  padding: 10px;
-  height: 462px;  
-}
-*/
-
 
 #conteudo-artigos-padrao-interface {
   padding: 10px;
@@ -141,4 +134,13 @@
     margin: 4px 0 20px;
     padding: 8px;
     width: 718px;
+}
+
+
+
+#pesquisar-maps header {
+
+ padding: 15px;
+  height: 30px;
+  color: white;
 }
