--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -268,7 +268,7 @@
 			
 			
 			
-			<article id="padrao-maps-pesquisa" onload="inicializaMapa()">
+			<article id="padrao-maps-pesquisa">
 				
 				<header class="azul">
 					<h2>Controles de Interfaces - Mapas</h2>
@@ -297,15 +297,15 @@
 						<fieldset>
 							<legend>Endereço</legend>
 							<label>Endereço</label>
-							<input id="endereco-campo-pesquisar-mapas" type="text" autofocus="true" />
+							<input id="endereco-campo-pesquisar-mapas" type="text" />
 							<a id="botao-pesquisar-endereco-maps" href="#pesquisar-maps" class="botao botao-azul">Pesquisar</a>
 						</fieldset>
 						<fieldset>
 							<legend>Rotas</legend>
 							<label>De</label>
-							<input id="endereco-origem-campo-pesquisar-mapas" type="text" autofocus="true" />
+							<input id="endereco-origem-campo-pesquisar-mapas" type="text" />
 							<label>Para</label>
-							<input id="endereco-destino-campo-pesquisar-mapas" type="text" autofocus="true" />
+							<input id="endereco-destino-campo-pesquisar-mapas" type="text" />
 							<a id="botao-pesquisar-rota-maps" href="#pesquisar-maps" class="botao botao-azul">Pesquisar</a>
 						</fieldset>
 					</form>
