Implementacao da remoção da mensagem quando o usuario clica no botão pesquisar.

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -279,7 +279,7 @@
 			
 				<footer>
 					<ul>
-						<li><span>Algumas Vezes quando clicamos em algum botão aparece uma nova janela. Experimente!</span></li>
+						<li id="mensagem-botao-maps"><span>Algumas Vezes quando clicamos em algum botão aparece uma nova janela. Experimente!</span></li>
 						<li><a id="janela-pesquisar-maps" href="#pesquisar-maps" class="botao botao-azul">Pesquisar</a></li>
 						<li><a id="botao-avancar-fim" href="#padrao-drop-down" class="botao botao-azul">Avançar</a></li>
 					</ul>
