Implementacao da pesquisa por endereco Implementacao da geolocalizacao ao carregar os mapas

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -298,7 +298,7 @@
 							<legend>Endereço</legend>
 							<label>Endereço</label>
 							<input id="endereco-campo-pesquisar-mapas" type="text" />
-							<a id="botao-pesquisar-endereco-maps" href="#pesquisar-maps" class="botao botao-azul">Pesquisar</a>
+							<a id="botao-pesquisar-endereco-maps"  class="botao botao-azul">Pesquisar</a>
 						</fieldset>
 						<fieldset>
 							<legend>Rotas</legend>
