--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -12,7 +12,7 @@
 				<header class="verde"><h2>Hardware</h2></header>
 				<div>
 					<ul>
-						<li><h3><%= link_to "Teclado", teclado_index_path %></h3></li>
+						<li class="opcao-3"><h3><%= link_to "Teclado", teclado_index_path %></h3></li>
 					</ul>
 				</div>
 			</article>
@@ -21,7 +21,7 @@
 				<header class="azul"><h2>Software</h2></header>
 				<div>
 					<ul>
-						<li><h3><%= link_to "Controles de Interfaces", controle_interface_index_path %></h3></li>
+						<li class="opcao-4"><h3><%= link_to "Controles de Interfaces", controle_interface_index_path %></h3></li>
 					</ul>
 				</div>
 			</article>
