Implementação do controler Abstração e Cognicao

--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -30,6 +30,10 @@
   height: 462px;
 }
 
+#conteudo-artigos-padrao-interface div:last-child {  border-left: 1px solid #DDDDDD; }
+
+
+
 .painel-descricao-padrao-interface {
   width: 447px;
   float: left;
