--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -29,7 +29,9 @@
 			<article>
 				<header class="lilas"><h2>Jogos</h2></header>
 				<div>
-					
+					<ul>
+						<li class="opcao-5"><h3><%= link_to "Abstração e Cognicao", abstracao_cognicao_index_path %></h3></li>
+					</ul>
 				</div>
 			</article>
 		</div>
