--- a/app/views/abstracao_cognicao/verbal.html.erb
+++ b/app/views/abstracao_cognicao/verbal.html.erb
@@ -1,2 +1,25 @@
-<h1>AbstracaoCognicao#verbal</h1>
-<p>Find me in app/views/abstracao_cognicao/verbal.html.erb</p>
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to abstracao_cognicao_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
+</header>
+
+<div id="container">
+	<section class="container-artigos">
+		<div class="moldura">
+			<article>
+				<header class="lilas">
+					<h2>Exemplo</h2>
+				</header>
+				<div class="conteudo-perguntas">
+				
+				</div>
+				<footer>
+				
+				</footer>
+			</article>
+		</div>
+	</section>
+</div>
