Implementação da action verbal

--- a/app/views/abstracao_cognicao/verbal.html.erb
+++ b/app/views/abstracao_cognicao/verbal.html.erb
@@ -14,7 +14,7 @@
 					<h2>Exemplo</h2>
 				</header>
 				<div class="conteudo-perguntas">
-				
+					<%= @analogias_verbais.perguntas %>
 				</div>
 				<footer>
 				
