--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -29,6 +29,16 @@ p {
   font-size:12pt;
 }
 
+
+input[type='text'] {
+    border: 1px solid #DDDDDD;
+    box-shadow: 0 0 4px #AAAAAA;
+    color: #555555;
+    font-size: 16px;
+    margin: 4px 0 20px;
+    padding: 8px;
+}
+
 /*
  * DEFINIÇÃO DE CORES
  */
