--- a/app/assets/stylesheets/abstracao_cognicao.css.scss
+++ b/app/assets/stylesheets/abstracao_cognicao.css.scss
@@ -43,14 +43,17 @@
   font-size:14pt;
 }
 
-#container-respostas {
+.container-respostas {
   padding: 20px;
   border: 1px solid #C9C0BB;
+  visibility: hidden;
+  
 }
 
-#container-respostas ul li { display:inline-block; }
 
-#container-respostas ul li span {
+.container-respostas ul li { display:inline-block; }
+
+.container-respostas ul li span {
   padding:20px 0px;  
   line-height:1.5px;
   margin-right: 10px;
@@ -87,10 +90,11 @@
 }
 
 
-
-#botao-avancar-pergunta{
+.avancar-pergunta{ 
   margin-left: 350px;
-  visibility:visible;
+  visibility: hidden;
 }
+.responder-pergunta { visibility:visible; }
 
-#botao-responder-pergunta { visibility:visible; }
+
+
