Implementação do Script de Correção das perguntas.

--- a/app/assets/stylesheets/abstracao_cognicao.css.scss
+++ b/app/assets/stylesheets/abstracao_cognicao.css.scss
@@ -68,7 +68,7 @@
   margin-left: 5px;
 }
 
-#resposta-pergunta {
+.resposta-pergunta {
   width: 875px;
 }
 
@@ -97,4 +97,4 @@
 .responder-pergunta { visibility:visible; }
 
 
-#resposta-correta { display: none; }
+.resposta-correta { display: none; }
