--- a/app/views/abstracao_cognicao/verbal.html.erb
+++ b/app/views/abstracao_cognicao/verbal.html.erb
@@ -31,7 +31,7 @@
 									<% pergunta.alternativas.each do |alternativa| %>
 									
 										<li>
-											<input name="alternativa" type="radio" value=<%=alternativa.letra%> required="true" />
+											<input id=<%= ("resposta-pergunta-" + pergunta.id.to_s) %> name="alternativa" type="radio" value=<%=alternativa.letra%> required="true" />
 											<label>
 												<span class="letra-alternativa"><%= alternativa.letra %></span>-<span class="alternativa"><%= alternativa.descricao %></span>
 											</label>
@@ -49,10 +49,8 @@
 									
 									<div id="resposta-aberta">
 										<label>Resposta</label>
-										<input id="resposta-pergunta" type="text" spellcheck="true" required="true" />
+										<input id=<%= ("resposta-pergunta-" + pergunta.id.to_s) %> class="resposta-pergunta" type="text" spellcheck="true" required="true" />
 									</div>
-							
-								
 
 								<% end %>
 							
@@ -64,7 +62,10 @@
 							<ul>
 								<li><span>Resposta:</span><span><%= pergunta.comentario_resposta %></span></li>
 							</ul>
-							<ul id="resposta-correta">
+							
+							
+							
+							<ul id=<%= ("resposta-correta-" + pergunta.id.to_s) %> class="resposta-correta">
 								<% pergunta.respostas.each do |r| %>
 									<li><%= r.resposta %></li>
 								<% end %>
