--- a/app/views/abstracao_cognicao/logica.html.erb
+++ b/app/views/abstracao_cognicao/logica.html.erb
@@ -25,6 +25,9 @@
 						</div>
 						
 						<div id="container-alternativas">
+							
+							
+							
 							<%if pergunta.alternativas.length > 1 %>
 							
 								<ul>
@@ -43,18 +46,28 @@
 							<% else %>
 							
 							
-								<% pergunta.alternativas.each do |alternativa| %>
+								<% if pergunta.alternativas.length > 0 %>
+								
+									<% pergunta.alternativas.each do |alternativa| %>
 									
-									<p class="descricao-adicional"><%= alternativa.descricao %></p>
+										<p class="descricao-adicional"><%= alternativa.descricao %></p>
 									
-									<div id="resposta-aberta">
-										<label>Resposta</label>
-										<input id=<%= ("resposta-pergunta-" + (indice + 1).to_s) %> class="resposta-pergunta" type="text" spellcheck="true" required="true" />
-									</div>
+										<div id="resposta-aberta">
+											<label>Resposta</label>
+											<input id=<%= ("resposta-pergunta-" + (indice + 1).to_s) %> class="resposta-pergunta" type="text" spellcheck="true" required="true" />
+										</div>
 
+									<% end %>
+								<% else %>
+									<div id="imagem-pergunta">
+										<%= image_tag pergunta.url_imagem, :alt => "Imagem Pergunta", :title => "Imagem Pergunta" %>
+									</div>
+									<div id="resposta-aberta" class="painel-direito-pergunta">
+										<label>Resposta</label>
+										<input id=<%= ("resposta-pergunta-" + (indice + 1).to_s) %> class="resposta-pergunta-medio" type="text" spellcheck="true" required="true" />
+									</div>
 								<% end %>
-							
-									
+
 							<% end %>
 						</div>
 						
@@ -62,9 +75,6 @@
 							<ul>
 								<li><span>Resposta:</span><span><%= pergunta.comentario_resposta %></span></li>
 							</ul>
-							
-							
-							
 							<ul id=<%= ("resposta-correta-" + (indice + 1).to_s) %> class="resposta-correta">
 								<% pergunta.respostas.each do |r| %>
 									<li><%= r.resposta %></li>
