Implementacao do exericio do teclado

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -227,7 +227,7 @@
 			</article>
 			
 			<!-- Padrão maps -->
-			<article id="padrao-maps">
+			<article id="padrao-maps" onload="inicializaMapa()">
 				
 				<header class="azul">
 					<h2>Controles de Interfaces - Mapas</h2>
