--- a/app/views/teclado/exercitar_teclado.html.erb
+++ b/app/views/teclado/exercitar_teclado.html.erb
@@ -5,6 +5,31 @@
 		<% end %>
 	</div>
 </header>
+<div id="container">
+	<section class="container-artigos">
+		<div id="moldura">
+			<% for i in 0..15 %>
+				<article id=<%= i+1 %>>
+					
+					<header class="verde">
+						<h2>Exercício Teclado</h2>
+					</header>
 
-<h1>Teclado#exercitar_teclado</h1>
-<p>Find me in app/views/teclado/exercitar_teclado.html.erb</p>
+					<div id="container-recaptcha" class="conteudo-perguntas">
+						<div id="recaptcha">
+							
+						</div>
+					<div/>
+					
+					<footer id="rodape-perguntas">
+						<ul>
+							
+							
+						</ul>
+					</footer>
+				</article>
+
+			<% end %>
+		</div>
+	</section>
+</div>
