--- a/app/views/teclado/index.html.erb
+++ b/app/views/teclado/index.html.erb
@@ -16,7 +16,7 @@
 						<h3><%= link_to "Estudar Teclado", teclado_estudar_teclado_path %></h3>
 					</li>
 					<li>
-						
+						<h3><%= link_to "Exercício Teclado", teclado_exercitar_teclado_path %></h3>
 					</li>
 				</ul>
 			</div>
