--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Orbitron|Michroma|Monofett|Allerta+Stencil|Gruppo|Ubuntu:400,300' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCilujgoVxa6h10qYCnLMyGrwxzgO67kNg&sensor=true"></script>
-  
+  <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 </head>
 <body>
 
